@@ -1,6 +1,8 @@
 plugins {
     id("com.android.application")
-    id("org.jetbrains.kotlin.android") // Ensure Kotlin plugin is applied
+    id("org.jetbrains.kotlin.android")
+//    id("org.jetbrains.kotlin.kapt")
+    id("com.github.ben-manes.versions") version "0.52.0"
 }
 
 android {
@@ -33,7 +35,7 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = "17" // Ensure Kotlin is using the correct JVM target
+        jvmTarget = "17"
     }
 
     buildFeatures {
@@ -42,24 +44,27 @@ android {
     }
 }
 
-dependencies {
-    implementation("androidx.appcompat:appcompat:1.7.0")
-    implementation("com.google.android.material:material:1.12.0")
-    implementation("androidx.constraintlayout:constraintlayout:2.2.1")
-    implementation("androidx.navigation:navigation-fragment-ktx:2.8.9")
-    implementation("androidx.navigation:navigation-ui-ktx:2.8.9")
-
-    // Fix Kotlin duplicate class issue: Use only kotlin-stdlib
-    implementation("org.jetbrains.kotlin:kotlin-stdlib:2.1.10")
-
-    testImplementation("junit:junit:4.13.2")
-    androidTestImplementation("androidx.test.ext:junit:1.2.1")
-    androidTestImplementation("androidx.test.espresso:espresso-core:3.6.1")
-}
-
-// Force Kotlin 1.8.22 to prevent duplicate class conflicts
-configurations.all {
-    resolutionStrategy {
-        force("org.jetbrains.kotlin:kotlin-stdlib:2.1.10")
+/*kapt {
+    javacOptions {
+        option("--add-opens", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED")
+        option("--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED")
+        option("--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED")
+        option("--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED")
     }
+}*/
+
+dependencies {
+    implementation(libs.appcompat)
+    implementation(libs.material)
+    implementation(libs.constraintlayout)
+    implementation(libs.navigation.fragment.ktx)
+    implementation(libs.navigation.ui.ktx)
+    implementation(libs.kotlin.stdlib)
+    testImplementation(libs.junit)
+    androidTestImplementation(libs.ext.junit)
+    androidTestImplementation(libs.espresso.core)
+
+    implementation(libs.retrofit2)
+    implementation(libs.retrofit2.converter.gson)
+    implementation(libs.okhttp3.logging.interceptor)
 }
